# sdg4varselect

./: .RData  .Rhistory  .coverage  .flake8  .gitignore  .nfs000000005ac793c100000006  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  1000_explosion_jac.ipynb  JB_para  README.ipynb  README.md  changement_jac_plateau.html  cluster_phenofore.html  cout.txt  data_sim.py  estimate_beta.csv  estimate_theta.csv  fisher_example.py  grad_example.py  joint_model.py  penalized_estimate_beta.csv  penalized_estimate_theta.csv  penalized_estimatebeta.csv  penalized_estimatetheta.csv  plot_graph.R  pyproject.toml  script.sh  slurm-626526.out  slurm-626529.out  slurm-626530.out  slurm-626531.out  slurm-626532.out  slurm-626533.out  slurm-626535.out  slurm-626536.out  slurm-626537.out  slurm-626674.out  slurm-626675.out  (+19 more)
doc/: auto_gen.py
examples/: calimero copy.ipynb  calimero.html  calimero.ipynb  estimation_jm_nlmem.ipynb  joint_model.html  joint_model.ipynb  logistic_model_example.ipynb  marion.ipynb  senescence copy.ipynb  senescence.ipynb  tutorial.ipynb  variable_selection_lmem.ipynb  variable_selection_logistic.ipynb
images/: estimate_beta.csv  estimate_theta.csv  penalized_estimate_beta.csv  penalized_estimate_theta.csv
joint_model/: model.py  multi_res.py  multi_run  multi_run.py  one_res.py  one_run.py  plot_multi_res.py  plot_res.py  res_selection.pkl  sample.py  script.sh  test.py
joint_model_100/: data_generation.py  multi_run.py  multi_run_gd.py  one_run.py  plot_res.py  res_selection.pkl  sample.py  script.sh  slurm-626731.out  slurm-626732.out  slurm-626733.out  slurm-626734.out  slurm-626735.out  slurm-626778.out  slurm-626780.out  slurm-626781.out  slurm-626782.out  slurm-626783.out  slurm-626784.out  slurm-626785.out  slurm-626786.out  slurm-626787.out  slurm-626788.out  slurm-626789.out  slurm-626790.out  slurm-626791.out  slurm-626792.out  slurm-626793.out  slurm-626794.out  slurm-626795.out  slurm-626796.out  slurm-626797.out  slurm-626798.out  slurm-626881.out  slurm-626882.out  solver.pkl  (+1 more)
(+378 files in other folders)
