[tool.poetry]
name = "sdg4varselect"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.3"
jax = "^0.4.1"
jaxlib = "^0.4.1"
numpy = "^1.24.1"
pytest = "^7.2.1"
ipython = "^8.8.0"
ipykernel = "^6.20.2"
pytest-cov = "^4.0.0"
parametrization-cookbook = "^0.18"
pylint = "^2.16.2"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
